# two-wheel-bot-firmware

./: .gitignore  CLAUDE.md  CMakeLists.txt  INFERENCE_README.md  LICENSE  PID_CONTROL_README.md  README.md  build_modes.sh  prj.conf  sample.yml  west.yml
boards/: esp32s3_devkitc.conf  esp32s3_devkitc.overlay  nucleo_wl55jc.overlay
src/: ControlMode.h  DQNAgent.cpp  DQNAgent.h  DQNAgent_old.cpp  DataLogger.h  KalmanFilter.h  Motor.cpp  Motor.h  PIDController.h  TwoWheelBotDQN.h  i2c_manual_init.h  main.cpp  main_inference.cpp  model.cpp
